add avatar, name-yos, remark details

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -80,7 +80,6 @@ a small {
 
 .wrapper {
   width:95%;
-  height: 1500px;
   margin:0 auto;
   border:0 solid red;
   background:none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
@@ -130,6 +129,10 @@ th {
 
 img {
   max-width:100%;
+}
+
+img:hover {
+  opacity: 0.8
 }
 
 header {
@@ -236,6 +239,14 @@ footer {
 
 .row:hover {
   background-color:rgba(255,255,255,0.8);
+}
+
+.row.critical {
+  border-bottom:0 solid #ed145b;
+  margin:0 0 20px 0;
+  padding:10px;
+  background-color:rgba(255,255,255,0.5);
+  border: 1px solid #ed145b;
 }
 
 @media print, screen and (max-width: 1280px) {
