--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 html {
-  background-image: url('/assets/images/pattern-4.png');
+  background-image: url('./assets/images/pattern-4.png');
   background-repeat: repeat;
   background-color: #ddd;
 }
