--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -132,7 +132,11 @@ img {
 }
 
 img:hover {
-  opacity: 0.8
+  opacity: 0.8;
+}
+
+img.animated-gif {
+  width: 332px;
 }
 
 header {
@@ -290,6 +294,10 @@ footer {
     right:50px;
     top:52px;
   }
+
+  img.animated-gif {
+    max-width: 100%;
+  }
 }
 
 @media print, screen and (max-width: 720px) {
@@ -308,6 +316,10 @@ footer {
   pre, code {
     word-wrap:normal;
   }
+
+  h2 {
+    font-size:24px;
+  }
 }
 
 @media print, screen and (max-width: 480px) {
@@ -317,6 +329,10 @@ footer {
 
   header ul {
     display:none;
+  }
+
+  h2 {
+    font-size:20px;
   }
 }
 
