--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -238,6 +238,35 @@ footer {
   overflow: auto;
 }
 
+@-webkit-keyframes animated-heart {
+  0%   { opacity: 0.2; }
+  50%  { opacity: 1; }
+  100% { opacity: 0.2; }
+}
+@-moz-keyframes animated-heart {
+  0%   { opacity: 0.2; }
+  50%  { opacity: 1; }
+  100% { opacity: 0.2; }
+}
+@-o-keyframes animated-heart {
+  0%   { opacity: 0.2; }
+  50%  { opacity: 1; }
+  100% { opacity: 0.2; }
+}
+@keyframes animated-heart {
+  0%   { opacity: 0.2; }
+  50%  { opacity: 1; }
+  100% { opacity: 0.2; }
+}
+
+.heart {
+  -webkit-animation: animated-heart 5s infinite; /* Safari 4+ */
+  -moz-animation:    animated-heart 5s infinite; /* Fx 5+ */
+  -o-animation:      animated-heart 5s infinite; /* Opera 12+ */
+  animation:         animated-heart 5s infinite; /* IE 10+, Fx 29+ */
+  color: #ed145b;
+}
+
 .row {
   border-bottom:0 solid #ed145b;
   margin:0 0 20px 0;
